refactor: update session management and request handling for improved clarity and maintainability